# qml_kmp_demo

./: CMakeLists.txt  Main.qml  README.md  counterlib.qrc  main.cpp
counterlib/: build.gradle.kts  settings.gradle.kts
counterlib/gradle/wrapper/: gradle-wrapper.properties
counterlib/src/commonMain/kotlin/ru.vizbash.counterlib/: Counter.kt  Observable.kt
